
[package]
name = "reconcile-app"
version = "2.1.0"
description = "对账匹配工具 - 本地静态页封装为 EXE"
authors = ["Simon"]
license = "MIT"
edition = "2021"

[dependencies]
tauri = { version = "1", features = ["windows7-compat"] }

[build-dependencies]
tauri-build = "1"

[profile.release]
lto = true
codegen-units = 1
opt-level = "s"
strip = true
